--- a/Client/src/app/Admin/Companents/exam-list/exam-list.component.css
+++ b/Client/src/app/Admin/Companents/exam-list/exam-list.component.css
@@ -2,3 +2,39 @@
 {
     color: orange;
 }
+
+.header
+{
+    font-weight: bolder;
+    text-align: center;
+}
+
+.header h2
+{
+    font-weight: bolder;
+}
+
+.serchDiv
+{
+    display: flex;
+}
+
+.ExamButtonDiv
+{
+    display: flex;
+}
+
+td
+{
+    vertical-align: middle;
+}
+
+.buttonTd
+{
+    padding: 0;
+}
+
+.buttonTd button
+{
+    padding: 5px;
+}
