done some client

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<router-outlet></router-outlet>
+<!-- [style.background]="'url(https://www.getpiping.com/wp-content/uploads/2014/11/geo.jpg)'" -->
+<body>
+        <app-title-header>
+        </app-title-header>
+        <br>
+        <!-- <app-admin-layout></app-admin-layout> -->
+        
+        <router-outlet></router-outlet>
+</body>
