--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+     height: 100%;
+     background-image: url(https://www.getpiping.com/wp-content/uploads/2014/11/geo.jpg);
+ }
+body {
+     margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+     }
+h1, app-title-header{
+    color: gold;
+    text-align: center; 
+    font-weight: bolder;
+}
+
