added category changed event add question service change exam list text color to white add category route guard updated category selection button text bug fixes.....

--- a/Client/src/app/Admin/Companents/exam-list/exam-list.component.css
+++ b/Client/src/app/Admin/Companents/exam-list/exam-list.component.css
@@ -18,6 +18,7 @@
 .serchDiv
 {
     display: flex;
+    color: white;
 }
 
 .ExamButtonDiv
@@ -38,4 +39,8 @@ td
 .buttonTd button
 {
     padding: 5px;
+}
+
+.resultRow{
+    color: white;
 }
