--- a/Client/src/app/Admin/Companents/admin-layout/admin-layout.component.html
+++ b/Client/src/app/Admin/Companents/admin-layout/admin-layout.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3"><br>
-        <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-            <div class="btn-group" mdbDropdown>
-                 <button mdbDropdownToggle type="button" mdbBtn color="indigo" class="dropdown-toggle waves-light"
+        <div class="btn-group-vertical fullwidth" role="group" aria-label="Vertical button group">
+            <div class="btn-group fullwidth" mdbDropdown>
+                 <button mdbDropdownToggle type="button" mdbBtn color="indigo" class="dropdown-toggle waves-light fullwidth"
                 for="studyList" id="studyList" mdbWavesEffect>
-                    Choose a field of study
+                    {{selectedTitle}}
                 </button>  
         
                  <div class="dropdown-menu dropdown-primary" id="studyList">
@@ -14,14 +14,12 @@
                 </div>
             </div><br>
 
-            <button mdbBtn type="button" color="amber" class="waves-light" mdbWavesEffect
-            [routerLink]="[ '/ManageQuestions']">Manage Questions</button>
-            <button mdbBtn type="button" color="amber" class="waves-light" mdbWavesEffect
-            [routerLink]="[ '/ManageTests']">Manage Tests</button>
-            <button mdbBtn type="button" color="amber" class="waves-light" mdbWavesEffect
-            [routerLink]="[ '/Reports']">Reports</button>
-            <button mdbBtn type="button" color="amber" class="waves-light" mdbWavesEffect
-            [routerLink]="[ '/admin/exams/1/1']">Exam</button>
+            <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
+            [routerLink]="[ 'ManageQuestions']" [disabled]="isEmptyCategory" >Manage Questions</button>
+            <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
+            [routerLink]="[ 'exams']" [disabled]="isEmptyCategory" >Manage Tests</button>
+            <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
+            [routerLink]="[ 'Reports']" [disabled]="isEmptyCategory" >Reports</button>
         </div>
     </div>
      <div class="col-md-9">
