started question list

--- a/Client/src/app/Admin/Companents/admin-layout/admin-layout.component.html
+++ b/Client/src/app/Admin/Companents/admin-layout/admin-layout.component.html
@@ -15,7 +15,7 @@
             </div><br>
 
             <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
-            [routerLink]="[ 'ManageQuestions']" [disabled]="isEmptyCategory" >Manage Questions</button>
+            [routerLink]="[ 'questions']" [disabled]="isEmptyCategory" >Manage Questions</button>
             <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
             [routerLink]="[ 'exams']" [disabled]="isEmptyCategory" >Manage Tests</button>
             <button mdbBtn type="button" color="amber" class="waves-light fullwidth" mdbWavesEffect
