added data to question form for update

--- a/Client/src/app/Admin/Companents/question-list/question-list.component.html
+++ b/Client/src/app/Admin/Companents/question-list/question-list.component.html
@@ -30,8 +30,8 @@
       </td>
       <td *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" >{{el.UpdatedOn | date:'HH:mm dd/MM/yyyy'}}</td>
       <td *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" >
-        <span  *ngIf="!el.IsMultipleChoice">Single choice  </span>
-        <span  *ngIf="el.IsMultipleChoice">Muliple choice  </span>
+        <span  *ngIf="el.IsMultipleChoice=='false'">Single choice  </span>
+        <span  *ngIf="el.IsMultipleChoice=='true'">Multiple choice  </span>
       </td>
       <td *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" >{{el.Exams}}</td>
       <td *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" >
