--- a/Client/src/app/Admin/Companents/question-list/question-list.component.html
+++ b/Client/src/app/Admin/Companents/question-list/question-list.component.html
@@ -24,7 +24,7 @@
       <th *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" scope="row">{{el.Id}}</th>
       <td *ngIf="i+1 >= firstItemIndex && i < lastItemIndex" >
         <div>
-          {{el.Question}}
+          <strong>{{el.Question}}</strong><br/>
           {{el.Tags}}
         </div>
       </td>
