--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -4,7 +4,7 @@
         <app-title-header>
         </app-title-header>
         <br>
-        <!-- <app-admin-layout></app-admin-layout> -->
+        <app-admin-layout></app-admin-layout> 
         
         <router-outlet></router-outlet>
 </body>
