--- a/Client/src/app/User/Compannets/anwsered-question/anwsered-question.component.css
+++ b/Client/src/app/User/Compannets/anwsered-question/anwsered-question.component.css
@@ -16,3 +16,15 @@ div{
     margin: 0 10px 0 10px;
     padding: 0 10px 0 10px;
 }
+
+.CorrectAnswer{
+    color: green;
+}
+
+.WrongAnswer{
+    color: red;
+}
+
+.readOnly{
+    pointer-events: none; 
+}
