--- a/Client/src/app/Admin/Companents/exam-form/exam-form.component.html
+++ b/Client/src/app/Admin/Companents/exam-form/exam-form.component.html
@@ -77,16 +77,19 @@
       <option selected disabled value="">Please choose Certificate template</option>
       <option *ngFor="let item of certificates" [value]="item.name"> {{item.name}} </option>
     </select>
-    <br><br>
+    <br><br><br><br>
 
+    <hr style="background-color:gray;">
     <h3> Email delivery upon test compilation </h3>
+    <hr style="background-color:gray;">
+
     <!-- Field of study -->
     <p class="text-left" [(ngModel)]="stam" ngModel name="currentStatus"> Current Status:
       <ng-container *ngIf="validateEmail(emailFrom.value) ; else elseTemplate">
-        <b  style="color:green"> ON  </b>
+        <b style="color:green"> ON </b>
       </ng-container>
       <ng-template #elseTemplate>
-        <b  style="color:red"> OFF </b>
+        <b style="color:red"> OFF </b>
       </ng-template>
     </p>
     <br>
@@ -96,6 +99,14 @@
     <input type="text" ngModel name="emailFrom" #emailFrom="ngModel" id="emailFrom" class="form-control mb-4"
       placeholder="Email From" required [value]="">
 
+    <h4 style="color:green;"> Passing the Grade </h4>
+    <hr>
+
+    <email-title-and-body [email]="passingEmail"></email-title-and-body>
+
+    <h4 style="color:red"> Failing the Grade </h4>
+    <hr>
+    <email-title-and-body [email]="failureEmail"></email-title-and-body>
 
 
     <!-- Send button -->
@@ -103,6 +114,7 @@
       [disabled]="!f.valid || !f2.valid">Save</button>
     <p>{{f.value | json}} </p>
     <p>{{f2.value | json}} </p>
+    <p>{{failureEmail| json}} </p>
   </form>
   <!-- End of Test form -->
 
