add password reset

--- a/Client/src/app/Admin/Companents/login/login.component.html
+++ b/Client/src/app/Admin/Companents/login/login.component.html
@@ -61,7 +61,13 @@
         </p>
       </div>
       <!--Grid column-->
-
+       <!--Grid column-->
+       <div class="col-md-12">
+          <p class="font-small white-text d-flex justify-content-end">forgot password?
+            <a [routerLink]="['/admin/forgotPassword']" class="green-text ml-1 font-weight-bold"> reset password</a>
+          </p>
+        </div>
+        <!--Grid column-->
     </div>
   </div>
   <!--/Form without header-->
