--- a/Client/src/app/Admin/Companents/forgot-password/forgot-password.component.html
+++ b/Client/src/app/Admin/Companents/forgot-password/forgot-password.component.html
@@ -1,5 +1,14 @@
 <div class="conteiner">
-    <input type="email" minlength="4" #darkFormEmailEx class="form-control white-text" formControlName="darkFormEmailEx" required mdbInput>
-    <label for="darkFormEmailEx">enter you'r email</label>
-    <button>Send Reset Email</button>
+        <div class="md-form limitWidth" *ngIf="!sent">
+            <span *ngIf="err" class="white-text">can't send rest password email: {{err}}</span>
+            <br />
+            <input type="email" minlength="4" #darkFormEmailEx class="form-control white-text"
+             required mdbInput [(ngModel)]="userEmail" placeholder="enter you'r email">
+            <label for="darkFormEmailEx" class="labelColor">Email:</label>
+            <button (click)="send()" type="button" mdbBtn color="success" block="true" rounded="true" class="z-depth-1 waves-light" mdbWavesEffect>
+                Send Reset Email</button>
+        </div>
+        <div class="limitWidth white-text" *ngIf="sent">
+            rest password email has been sent to {{userEmail}}
+        </div>
 </div>
