added admin registration

--- a/Client/src/app/Admin/Companents/login/login.component.html
+++ b/Client/src/app/Admin/Companents/login/login.component.html
@@ -57,7 +57,7 @@
       <!--Grid column-->
       <div class="col-md-12">
         <p class="font-small white-text d-flex justify-content-end">Don't have an account?
-          <a href="#" class="green-text ml-1 font-weight-bold"> Sign up</a>
+          <a [routerLink]="['/admin/register']" class="green-text ml-1 font-weight-bold"> Sign up</a>
         </p>
       </div>
       <!--Grid column-->
